# phd-experiments

./: .gitignore  .gitmodules  tensor-contraction.c
SparseTest/: .gitignore  CHANGELOG.md  LICENSE  README.md  SparseTest.cabal  cabal.project  package.yaml  stack.yaml
SparseTest/app/: Main.hs
SparseTest/test/: .ghc.environment.x86_64-linux-9.6.7  ParserTest.hs  test.hs  test1.kb  test10.kb  test2.kb  test3.kb  test4.kb  test5.kb  test6.kb  test7.kb  test8.kb  test9.kb
TenSure/: CMakeLists.txt  Makefile
TenSure/include/: backend_interface.hpp  taco_generator.hpp
TenSure/include/common/: jsonParser.hpp
TenSure/include/taco_wrapper/: generator.hpp  taco_backend.hpp
TenSure/include/tensure/: formats.hpp  random_gen.hpp  utils.hpp
TenSure/scripts/: build_externals.sh
TenSure/src/: main.cpp  taco_generator.cpp
TenSure/src/taco_wrapper/: generator.cpp  taco_backend.cpp
TenSure/src/tensure/: random_gen.cpp  utils.cpp
code-gen/: codegen.py
stella/: README.md  codegen.py  dsl.py  ir.py  main.py  setup.py
stella/dsl/: api.py  (+1 more)
tensor-contraction/: Dockerfile  Makefile  README.md  docker_run.sh  exper1_dim10000_sparsity0.10.csv  exper1_dim10000_sparsity0.20.csv  exper1_dim10000_sparsity0.40.csv  exper1_dim10000_sparsity0.60.csv  exper1_dim10000_sparsity0.80.csv  exper1_dim10000_sparsity0.90.csv  exper2_sparsity0.10.csv  exper2_sparsity0.30.csv  exper2_sparsity0.40.csv  exper2_sparsity0.50.csv  exper3_sparsity0.10.csv  exper3_sparsity0.40.csv  exper3_sparsity0.60.csv  exper3_sparsity0.80.csv  results.ipynb  tensor-contraction.c  tensor-contraction.md
(+180 files in other folders)
